Batman! (this commit has no parents)

--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -1,2 +1,14 @@
+@import "vars"
+@import "fonts"
+@import "libs"
+@import "media"
+
+::placeholder
+	color: #666
+
+::selection
+	background-color: $accent
+	color: #fff
+
 body
-	background-color: blue
+	font-family: 'Roboto', sans-serif
